# Fract-ol

./: CMakeLists.txt  Makefile  README.md  fractal_zoom.c  fractol.c  fractol.h  julia.c  main.c  mouse_move.c  usage.c
